list view/add view works for version-4

--- a/style.css
+++ b/style.css
@@ -59,10 +59,13 @@ nav ul li {
 	height: 500px;
 }
 
-.hide {
+.hideAddView {
 	display: none;
 }
 
+.hideListView {
+	display: none;
+}
 
 /*-------------------
 CHOICES SIDE BAR---------
